- all
  be able to handle --expert
- gurpmi.addmedia
  o instead of discarding --update when using --distrib, give it a meaning:
    only add media flagged "update"
- rpmdrake:
  o update GUI package list

Version 4.16 - 26 August 2008, Thierry Vignaud

- MandrivaUpdate:
  o fix sorting by type of update
- rpmdrake:
  o make --mode option work again
  o workaround crashing when media's MD5SUM are garbaged (#41352)

Version 4.15 - 25 August 2008, Thierry Vignaud

- rpmdrake:
  o fix a rare crash when canceling (#41970)
  o list meta tasks in GUI package list too (#43114)
  o update GUI package list

Version 4.14 - 7 August 2008, Thierry Vignaud

- gurpmi.addmedia:
  o fix displaying --help
  o fix --urpmi-root option
- rpmdrake:
  o update GUI package list

Version 4.13 - 6 August 2008, Thierry Vignaud

- rpmdrake:
  o behaves like urpmi, allow to continue, thus skipping the bogus
    transaction instead of short-circuiting urpm::main_loop
  o fix some error dialogs not being modal
  o update GUI package list

Version 4.12 - 2 July 2008, Thierry Vignaud

- MandrivaUpdate, rpmdrake:
  o save & restore window size (#25932)
- rpmdrake:
  o make sure searches with no results clear package list (#34898)
  o show 'Group' in details (usefull for search results, #39244)
  o stop packaging rpmdrake-remove (#39485)
  o update GUI package list
 
Version 4.11 - 1 July 2008, Thierry Vignaud

- rpmdrake:
  o always create a search category in tree (#29164)
  o open the search results category once searching is done

Version 4.10 - 24 June 2008, Thierry Vignaud

- MandrivaUpdate: show type of update in mandrivaupdate (fix,
  security, ...) [spec 216]
- rpmdrake:
  o update GUI package list

Version 4.9.16 - 16 June 2008, Thierry Vignaud

- rpmdrake:
  o fix crash in URPM with non standard package names (#41002)
- MandrivaUpdate (#40235):
  o laptop mode (height not bigger than 480): fix test

Version 4.9.15 - 23 May 2008, Thierry Vignaud

- rpmdrake: