@@ -51,6 +51,7 @@ my %col = (
         is_update  => 1,
         type       => 2,
         name       => 3,
+        activatable => 4
     },
 );
 
@@ -970,7 +971,7 @@ sub mainwindow() {
      ),
     );
 
-    my $list = Gtk2::ListStore->new("Glib::Boolean", "Glib::Boolean", "Glib::String", "Glib::String");
+    my $list = Gtk2::ListStore->new("Glib::Boolean", "Glib::Boolean", "Glib::String", "Glib::String", "Glib::Boolean");
     $list_tv = Gtk2::TreeView->new_with_model($list);
     $list_tv->get_selection->set_mode('multiple');
     my ($dw_button, $edit_button, $remove_button, $up_button);
@@ -1016,7 +1017,7 @@ sub mainwindow() {
     );
 
     $list_tv->append_column(Gtk2::TreeViewColumn->new_with_attributes(N("Enabled"), my $tr = Gtk2::CellRendererToggle->new, 'active' => $col{mainw}{is_enabled}));
-    $list_tv->append_column(Gtk2::TreeViewColumn->new_with_attributes(N("Updates"), my $cu = Gtk2::CellRendererToggle->new, 'active' => $col{mainw}{is_update}));
+    $list_tv->append_column(Gtk2::TreeViewColumn->new_with_attributes(N("Updates"), my $cu = Gtk2::CellRendererToggle->new, 'active' => $col{mainw}{is_update}, activatable => $col{mainw}{activatable}));
     $list_tv->append_column(Gtk2::TreeViewColumn->new_with_attributes(N("Type"), Gtk2::CellRendererText->new, 'text' => $col{mainw}{type}));
     $list_tv->append_column(Gtk2::TreeViewColumn->new_with_attributes(N("Medium"), Gtk2::CellRendererText->new, 'text' => $col{mainw}{name}));
 
@@ -1074,7 +1075,9 @@ sub mainwindow() {
          $list->append_set($col{mainw}{is_enabled} => !$_->{ignore},
                            $col{mainw}{is_update} => ! !$_->{update},
                            $col{mainw}{type} => get_medium_type($_),
-                           $col{mainw}{name} => $name);
+                           $col{mainw}{name} => $name,
+                           $col{mainw}{activatable} => to_bool($::expert),
+                       );
      }
         $reorder_ok = 1;
     };
