@@ -1,5 +1,8 @@
 - all
   be able to handle --expert
+- edit-urpm-sources:
+  o by default do not enable to alter the 'update' flag (unless
+  --expert is given)
 - gurpmi.addmedia
   o instead of discarding --update when using --distrib, give it a meaning:
     only add media flagged "update"
